Add servo PWM fallback protocol

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/Bounce2"]
 	path = src/Bounce2
 	url = https://github.com/thomasfredericks/Bounce2
+[submodule "src/ESP32Servo"]
+	path = src/ESP32Servo
+	url = https://github.com/ahalekelly/ESP32Servo.git
