--- a/platformio.ini
+++ b/platformio.ini
@@ -1,14 +1,22 @@
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32-ota]
-platform = espressif32
+[platformio]
+description = "Dettlaff is a modular controller system for brushless flywheel Nerf blasters"
+default_envs = esp32-usb
+include_dir = 
+
+[env]
+platform = espressif32 @ ^5.1.1
 board = esp32dev
 framework = arduino
-upload_protocol = espota
-upload_port = 192.168.1.162
+lib_deps = 
+    https://github.com/ahalekelly/DShotRMT.git
+    madhephaestus/ESP32Servo @ ^0.11.0
+    thomasfredericks/Bounce2 @ ^2.71
 
 [env:esp32-usb]
-platform = espressif32
-board = esp32dev
-framework = arduino
 monitor_speed = 115200
+
+[env:esp32-wifi]
+upload_protocol = espota
+upload_port = dettlaff.local
