Add Bounce2 directly so we can switch algorithms

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,6 @@ framework = arduino
 lib_deps = 
     https://github.com/ahalekelly/DShotRMT.git
     madhephaestus/ESP32Servo @ ^0.11.0
-    thomasfredericks/Bounce2 @ ^2.71
 
 [env:esp32-usb]
 monitor_speed = 115200
@@ -20,3 +19,4 @@ monitor_speed = 115200
 [env:esp32-wifi]
 upload_protocol = espota
 upload_port = dettlaff.local
+monitor_speed = 115200
