--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ lib_deps =
     https://github.com/ahalekelly/DShotRMT.git
     madhephaestus/ESP32Servo @ ^0.11.0
     https://github.com/Dlloydev/QuickPID
+    philj404/SimpleSerialShell @ ^1.0
 
 custom_nanopb_protos =
     +<src/protos/blaster.proto>
