Pulling in SimpleSerialShell for shell commands
Also added a basic shell command to change the solenoid extension time

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@ framework = arduino
 lib_deps = 
     https://github.com/ahalekelly/DShotRMT.git
     madhephaestus/ESP32Servo @ ^0.11.0
-
+    philj404/SimpleSerialShell @ ^0.9.2
 [env:esp32-usb]
 monitor_speed = 115200
 
