Adding skip packages to the platformio ini to make profiling work
Apparenty this is a known bug with ESP32 and platform io

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,6 +25,8 @@ custom_nanopb_protos =
 custom_nanopb_options =
     --error-on-unmatched
 
+check_skip_packages = true
+
 [env:esp32-usb]
 monitor_speed = 115200
 
