--- a/platformio.ini
+++ b/platformio.ini
@@ -10,9 +10,15 @@ platform = espressif32 @ ^5.1.1
 board = esp32dev
 framework = arduino
 lib_deps = 
+	nanopb/Nanopb_Cpp@^0.1.10
+	nanopb/Nanopb@^0.4.7
     https://github.com/ahalekelly/DShotRMT.git
     madhephaestus/ESP32Servo @ ^0.11.0
     https://github.com/Dlloydev/QuickPID
+
+custom_nanopb_protos =
++protos/
+
 [env:esp32-usb]
 monitor_speed = 115200
 
