fixup! Adding the protos for BLE device configuration
Actually having Platformio compile the protos, addding missing newlines
at the end, and fixing the numbering

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,12 @@ lib_deps =
     https://github.com/Dlloydev/QuickPID
 
 custom_nanopb_protos =
-+protos/
+    +<src/protos/controls.proto>
+    +<src/protos/flwyheels.proto>
+    +<src/protos/pushers.proto>
+
+custom_nanopb_options =
+    --error-on-unmatched
 
 [env:esp32-usb]
 monitor_speed = 115200
