fixup! Adding the protos for BLE device configuration
Whoops, forgot to compile blaster.proto
Pulling in the other protos to use their message in blaster.proto
Syntax fixes

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,8 +17,9 @@ lib_deps =
     https://github.com/Dlloydev/QuickPID
 
 custom_nanopb_protos =
+    +<src/protos/blaster.proto>
     +<src/protos/controls.proto>
-    +<src/protos/flwyheels.proto>
+    +<src/protos/flywheels.proto>
     +<src/protos/pushers.proto>
 
 custom_nanopb_options =
