--- a/platformio.ini
+++ b/platformio.ini
@@ -9,10 +9,12 @@ include_dir =
 platform = espressif32 @ ^5.1.1
 board = esp32dev
 framework = arduino
+platform_packages = platformio/framework-arduinoespressif32@^3.20011.230801
 lib_deps = 
-    https://github.com/ahalekelly/DShotRMT.git
+    https://github.com/ahalekelly/DShotRMT.git#neo
     madhephaestus/ESP32Servo @ ^0.11.0
     https://github.com/Dlloydev/QuickPID
+    
 [env:esp32-usb]
 monitor_speed = 115200
 
