--- a/platformio.ini
+++ b/platformio.ini
@@ -3,22 +3,23 @@
 [platformio]
 description = "Dettlaff is a modular controller system for brushless flywheel Nerf blasters"
 default_envs = esp32-usb
-include_dir = 
 
 [env]
 platform = espressif32 @ ^5.1.1
 board = esp32dev
 framework = arduino
 platform_packages = platformio/framework-arduinoespressif32@^3.20011.230801
+build_type = debug
 lib_deps = 
     https://github.com/ahalekelly/DShotRMT.git#neo
     madhephaestus/ESP32Servo @ ^0.11.0
-    https://github.com/Dlloydev/QuickPID
-    
+    dlloydev/QuickPID
+    dlloydev/sTune
+
 [env:esp32-usb]
-monitor_speed = 115200
+monitor_speed = 460800
 
 [env:esp32-wifi]
 upload_protocol = espota
 upload_port = dettlaff.local
-monitor_speed = 115200
+monitor_speed = 460800
