--- a/platformio.ini
+++ b/platformio.ini
@@ -9,15 +9,16 @@ include_dir =
 platform = espressif32 @ ^5.1.1
 board = esp32dev
 framework = arduino
+platform_packages = platformio/framework-arduinoespressif32@^3.20011.230801
 lib_deps = 
     https://github.com/DrGlaucous/DShotRMT_NEO.git
     madhephaestus/ESP32Servo @ ^0.11.0
     https://github.com/Dlloydev/QuickPID
 
 [env:esp32-usb]
-monitor_speed = 115200
+monitor_speed = 460800
 
 [env:esp32-wifi]
 upload_protocol = espota
 upload_port = dettlaff.local
-monitor_speed = 115200
+monitor_speed = 460800
