read battery voltage

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,7 @@ lib_deps =
     https://github.com/DrGlaucous/DShotRMT_NEO.git
     madhephaestus/ESP32Servo @ ^0.11.0
     https://github.com/Dlloydev/QuickPID
+    madhephaestus/ESP32AnalogRead
 
 [env:esp32-usb]
 monitor_speed = 460800
