fix broken arduinoespressif32 version

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@ include_dir =
 platform = espressif32 @ ^5.1.1
 board = esp32dev
 framework = arduino
-platform_packages = platformio/framework-arduinoespressif32@^3.20011.230801
+platform_packages = platformio/framework-arduinoespressif32@3.20014.231204
 lib_deps = 
     https://github.com/DrGlaucous/DShotRMT_NEO.git#568fd9cca212d22b5fb02f8315d4586268af6174
     madhephaestus/ESP32Servo @ ^0.11.0
