Update platformio.ini lib_deps

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,8 +13,8 @@ platform_packages = platformio/framework-arduinoespressif32@3.20014.231204
 lib_deps = 
     https://github.com/DrGlaucous/DShotRMT_NEO.git#568fd9cca212d22b5fb02f8315d4586268af6174
     madhephaestus/ESP32Servo @ ^0.11.0
-    https://github.com/Dlloydev/QuickPID
-    madhephaestus/ESP32AnalogRead
+    dlloydev/QuickPID^3.1.9
+    madhephaestus/ESP32AnalogRead^0.2.2
 
 [env:esp32-usb]
 monitor_speed = 460800
