add warning flags, some type fixes

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,14 @@ lib_deps =
     madhephaestus/ESP32Servo @ ^0.11.0
     dlloydev/QuickPID @ ^3.1.9
     madhephaestus/ESP32AnalogRead @ ^0.2.2
+build_flags =
+    -Wno-return-type
+build_src_flags = 
+    -Wall
+    -Wextra
+    -Wno-missing-field-initializers
+;    -Wconversion
+;    -Wsign-conversion
 
 [env:esp32-usb]
 monitor_speed = 460800
