--- a/.github/workflows/build_dyno.yml
+++ b/.github/workflows/build_dyno.yml
@@ -4,6 +4,7 @@ on:
     branches: [ master ]
     paths:
       - 'dyno/dyno.py'
+      - '.github/workflows/build_dyno.yml'
   workflow_dispatch:
 
 jobs:
@@ -14,6 +15,7 @@ jobs:
     - uses: actions/checkout@v4
       timeout-minutes: 5
     
+    # Rest of the windows job remains exactly the same...
     - name: Set up Python
       uses: actions/setup-python@v5
       timeout-minutes: 5
@@ -68,6 +70,7 @@ jobs:
     - uses: actions/checkout@v4
       timeout-minutes: 5
     
+    # Rest of the macos job remains exactly the same...
     - name: Set up Python
       uses: actions/setup-python@v5
       timeout-minutes: 5
@@ -135,14 +138,14 @@ jobs:
           # Get the date and short SHA
           DATE=$(date +'%Y-%m-%d')
           SHA=$(git rev-parse --short HEAD)
-          RELEASE_TAG="build-${DATE}-${SHA}"
+          RELEASE_TAG="dyno-${DATE}-${SHA}"
           
           # Get the commit message for release notes
           COMMIT_MSG=$(git log -1 --pretty=%B)
           
           # Create release
           gh release create "$RELEASE_TAG" \
-            --title "Build ${DATE} (${SHA})" \
+            --title "Dyno Build ${DATE} (${SHA})" \
             --notes "Automated build from commit: ${COMMIT_MSG}" \
             dist/windows-build/dyno-windows.exe \
             dist/macos-build/dyno-mac
