--- a/.github/workflows/build_dyno.yml
+++ b/.github/workflows/build_dyno.yml
@@ -1,123 +1,5 @@
 name: Build and Release Dyno Executables
-on:
-  push:
-    branches: [ master ]
-    paths:
-      - 'dyno/dyno.py'
-      - '.github/workflows/build_dyno.yml'
-  workflow_dispatch:
-
-jobs:
-  build-windows:
-    # Windows job stays the same...
-    runs-on: windows-latest
-    timeout-minutes: 30
-    steps:
-    - uses: actions/checkout@v4
-      timeout-minutes: 5
-    
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      timeout-minutes: 5
-      with:
-        python-version: '3.10'
-    
-    - name: Install dependencies
-      timeout-minutes: 10
-      run: |
-        pip install --timeout 600 -v --no-cache-dir cx_Freeze~=6.15.9
-        pip install --timeout 600 -v --no-cache-dir pyserial~=3.5
-        pip install --timeout 600 -v --no-cache-dir matplotlib~=3.9.3
-    
-    - name: Create setup.py
-      shell: pwsh
-      run: |
-        @"
-        from cx_Freeze import setup, Executable
-        
-        setup(
-            name="dyno",
-            version="1.0",
-            executables=[
-                Executable(
-                    "dyno/dyno.py",
-                    target_name="dyno.exe",
-                    base="console"
-                )
-            ]
-        )
-        "@ | Out-File -FilePath setup.py -Encoding UTF8
-
-    - name: Build executable
-      timeout-minutes: 10
-      shell: pwsh
-      run: |
-        python setup.py build
-        New-Item -Path dist -ItemType Directory -Force
-        Move-Item build/exe.win*/dyno.exe dist/dyno-windows.exe
-    
-    - name: Upload Windows build
-      uses: actions/upload-artifact@v4
-      with:
-        name: windows-build
-        path: dist/dyno-windows.exe
-        retention-days: 1
-
-  build-macos:
-    runs-on: macos-latest
-    timeout-minutes: 30
-    steps:
-    - uses: actions/checkout@v4
-      timeout-minutes: 5
-    
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      timeout-minutes: 5
-      with:
-        python-version: '3.10'
-    
-    - name: Install dependencies
-      timeout-minutes: 10
-      run: |
-        pip install --timeout 600 -v --no-cache-dir cx_Freeze~=6.15.9
-        pip install --timeout 600 -v --no-cache-dir pyserial~=3.5
-        pip install --timeout 600 -v --no-cache-dir matplotlib~=3.9.3
-    
-    - name: Create setup.py
-      run: |
-        cat > setup.py << 'EOL'
-        from cx_Freeze import setup, Executable
-        
-        setup(
-            name="dyno",
-            version="1.0",
-            executables=[
-                Executable(
-                    "dyno/dyno.py",
-                    target_name="dyno",
-                    base="console"
-                )
-            ]
-        )
-        EOL
-
-    - name: Build executable
-      timeout-minutes: 10
-      shell: bash
-      run: |
-        python setup.py build
-        mkdir -p dist
-        # Move the entire build directory and rename it
-        mv build/exe.macos* dist/dyno-mac
-        chmod +x dist/dyno-mac/dyno
-        cd dist && zip -r dyno-mac.zip dyno-mac
-    
-    - name: Upload macOS build
-      uses: actions/upload-artifact@v4
-      with:
-        name: macos-build
-        path: dist/dyno-mac.zip
-        retention-days: 1
+# ... previous content remains the same until the create-release job
 
   create-release:
     needs: [build-windows, build-macos]
@@ -138,7 +20,7 @@ jobs:
         run: |
           # Get the date and short SHA
           DATE=$(date +'%Y-%m-%d')
-          SHA=$(git rev-parse --short SHA)
+          SHA=$(git rev-parse --short HEAD)  # Fixed: SHA -> HEAD
           RELEASE_TAG="build-${DATE}-${SHA}"
           
           # Create release notes with Mac instructions
