--- a/.github/workflows/build_dyno.yml
+++ b/.github/workflows/build_dyno.yml
@@ -86,10 +86,25 @@ jobs:
       run: |
         cat > setup.py << 'EOL'
         from cx_Freeze import setup, Executable
-        
+        from cx_Freeze.hooks import get_qt_plugins_paths
+        import sys
+
+        build_exe_options = {
+            "packages": ["matplotlib", "serial", "numpy"],
+            "excludes": ["tkinter", "test", "distutils"],
+            "include_files": [],
+            "optimize": 2,
+            "build_exe": "build/dyno",
+            "zip_include_packages": "*",
+            "zip_exclude_packages": "",
+        }
+
         setup(
             name="dyno",
             version="1.0",
+            options={
+                "build_exe": build_exe_options,
+            },
             executables=[
                 Executable(
                     "dyno/dyno.py",
@@ -106,20 +121,20 @@ jobs:
       run: |
         python setup.py build
         mkdir -p dist
-        mv build/exe.macos* dist/dyno-mac
-        chmod +x dist/dyno-mac/dyno
-        cd dist && zip -r dyno-mac.zip dyno-mac
+        mv build/dyno/dyno dist/dyno-mac
+        chmod +x dist/dyno-mac
+        # No need to zip since it's a single file
     
     - name: Upload macOS build
       uses: actions/upload-artifact@v4
       with:
         name: macos-build
-        path: dist/dyno-mac.zip
+        path: dist/dyno-mac
         retention-days: 1
 
   create-release:
     needs: [build-windows, build-macos]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     permissions:
       contents: write
     steps:
@@ -144,18 +159,18 @@ jobs:
           Automated build from commit: $(git log -1 --pretty=%B)
 
           ## Mac Installation Instructions
-          1. Download dyno-mac.zip
-          2. Double-click to extract
-          3. Open Terminal
-          4. Navigate to the extracted folder: cd ~/Downloads/dyno-mac
-          5. Run the program: ./dyno
+          1. Download dyno-mac
+          2. Open Terminal
+          3. Navigate to Downloads: cd ~/Downloads
+          4. Make executable: chmod +x dyno-mac
+          5. Run the program: ./dyno-mac
 
           Note: If you get a security warning, go to System Preferences > Security & Privacy and click "Open Anyway"
           EOL
           
           # Create release
           gh release create "$RELEASE_TAG" \
-            --title "Build ${DATE} (${SHA})" \
+            --title "Dyno Build ${DATE} (${SHA})" \
             --notes-file release_notes.md \
             dist/windows-build/dyno-windows.exe \
-            dist/macos-build/dyno-mac.zip
+            dist/macos-build/dyno-mac
